Security: Remove actual YouTube API key and replace with placeholder instructions for users to get their own API key

--- a/youtube api analytics/YouTube Data Collection and Analysis.ipynb
+++ b/youtube api analytics/YouTube Data Collection and Analysis.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "87a3f9a6",
    "metadata": {},
    "outputs": [
@@ -124,8 +124,10 @@
     "from googleapiclient.discovery import build\n",
     "#importing libraries\n",
     "\n",
-    "API_KEY = 'AIzaSyD7ebGFfqcJ1d2Ed5Fa94AHm06ttyPG8bk'\n",
-    "#youtube api key\n",
+    "    \"# Get your own YouTube Data API v3 key from Google Cloud Console\\n\",\n",
+    "    \"# Visit: https://console.cloud.google.com/apis/credentials\\n\",\n",
+    "    \"API_KEY = 'YOUR_YOUTUBE_API_KEY_HERE'\\n\",\n",
+    "    \"#youtube api key\\n\",\n",
     "#function to define a function and encoded indian region youtube videos\n",
     "def get_trending_videos(api_key,max_results=200):\n",
     "    youtube = build('youtube','v3',developerKey = api_key)\n",
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2d5b26a2",
    "metadata": {},
    "outputs": [
@@ -507,7 +509,9 @@
     }
    ],
    "source": [
-    "API_KEY = 'AIzaSyD7ebGFfqcJ1d2Ed5Fa94AHm06ttyPG8bk'\n",
+    "# Get your own YouTube Data API v3 key from Google Cloud Console\n",
+    "# Visit: https://console.cloud.google.com/apis/credentials\n",
+    "API_KEY = 'YOUR_YOUTUBE_API_KEY_HERE'\n",
     "youtube = build('youtube','v3',developerKey =API_KEY)\n",
     "\n",
     "def get_category_mapping():\n",
