Update Netflix project to use correct CSV filename: netflix_content.csv

--- a/netflix content strategy analysis/Netflix Content Strategy Analysis.ipynb
+++ b/netflix content strategy analysis/Netflix Content Strategy Analysis.ipynb
@@ -64,11 +64,11 @@
    "outputs": [],
    "source": [
     "# Load the Netflix dataset\n",
-    "# df = pd.read_csv('netflix_data.csv')\n",
+    "# df = pd.read_csv('netflix_content.csv')\n",
     "# print(f\"Dataset shape: {df.shape}\")\n",
     "# df.head()\n",
     "\n",
-    "print(\"Ready to load Netflix dataset - please ensure netflix_data.csv is in the same directory\")"
+    "print(\"Ready to load Netflix dataset - please ensure netflix_content.csv is in the same directory\")"
    ]
   },
   {
