--- a/youtube api analytics/YouTube Data Collection and Analysis.ipynb
+++ b/youtube api analytics/YouTube Data Collection and Analysis.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bc95d1cd",
+   "metadata": {},
+   "source": [
+    "# Netflix Content Strategy Analysis\n",
+    "\n",
+    "This notebook has been updated to analyze Netflix content data instead of YouTube trending videos. We'll explore:\n",
+    "\n",
+    "1. **Content Distribution** - Movies vs TV Shows\n",
+    "2. **Geographic Analysis** - Content by country\n",
+    "3. **Genre Analysis** - Most popular genres\n",
+    "4. **Temporal Trends** - Content release patterns\n",
+    "5. **Rating Analysis** - Content ratings distribution\n",
+    "\n",
+    "The analysis will provide insights into Netflix's content strategy and market positioning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "44f0945e",
@@ -179,65 +197,6 @@
     "if __name__ =='__main__':\n",
     "    main()\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7e54c06f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      video_id                                              title  \\\n",
-      "0  9l5QY7BJmHQ  Janaab-e-Aali | Full Song | WAR 2 | Hrithik Ro...   \n",
-      "1  gWz_HMuqDIE  The Ba***ds Of Bollywood | Preview | Bobby Deo...   \n",
-      "2  I3g0GaVUNQw  [HINDI] 2025 OnePlus Android BGMS Season 4 | L...   \n",
-      "3  TKyDCwRQMLg  Pyaar Mein Hain Hum (Video Song): Pawan Singh ...   \n",
-      "4  hSBwq8yrXf0  World of Thama | Official Teaser | Ayushmann, ...   \n",
-      "\n",
-      "                                         description          published_at  \\\n",
-      "0  You loved it in theatres and now you can dance...  2025-08-20T09:33:21Z   \n",
-      "1  Bohot hard. Aur bohot heart bhi ❤️‍🔥🎬 \\n\\nWatc...  2025-08-20T12:50:47Z   \n",
-      "2  🔥 Esports Ka Blockbuster shuru ho chuka hai! P...  2025-08-21T14:58:47Z   \n",
-      "3  Presenting \"Pyaar Mein Hain Hum (Video Song)\" ...  2025-08-20T05:30:07Z   \n",
-      "4  Na darr kabhi itna shaktishaali tha, aur na py...  2025-08-19T05:40:07Z   \n",
-      "\n",
-      "                 channel_id  channel_title  category_id  \\\n",
-      "0  UCbTLwN10NoCU4WDzLf1JMOA            YRF           10   \n",
-      "1  UCZSNzBgFub_WWil6TOTYwAg  Netflix India           24   \n",
-      "2  UCbgq4Y6WypFnBBzrBDgR0zA  NODWIN Gaming           20   \n",
-      "3  UCq-Fj5jknLsUf-MWSy4_brA       T-Series           10   \n",
-      "4  UC-LOdiPoxninevJ0DkleCLg  Maddock Films           24   \n",
-      "\n",
-      "                                                tags    duration definition  \\\n",
-      "0  ['janaab-e-aali song', 'janaabe aali war 2 son...     PT3M37S         hd   \n",
-      "1  ['Bobby Deol', 'Karan Johar', 'Lakshya', 'Mano...     PT2M38S         hd   \n",
-      "2  ['bgmi', 'lan tournament', 'gaming tournament'...  PT3H32M27S         hd   \n",
-      "3  ['hindi songs 2025', 'tseries', 'tseries songs...     PT3M38S         hd   \n",
-      "4  ['Ayushmann Khurrana', 'Rashmika Mandanna', 'P...     PT1M50S         hd   \n",
-      "\n",
-      "   caption  view_count  like_count  dislike_count  favorite_count  \\\n",
-      "0     True     3788889      133263              0               0   \n",
-      "1     True    18543848      148474              0               0   \n",
-      "2    False     2103669       81830              0               0   \n",
-      "3    False     6851293      358397              0               0   \n",
-      "4    False    36844573      674786              0               0   \n",
-      "\n",
-      "   comment_count  \n",
-      "0           6109  \n",
-      "1           7169  \n",
-      "2            467  \n",
-      "3          53234  \n",
-      "4          64017  \n"
-     ]
-    }
-   ],
-   "source": [
-    "trending_videos = pd.read_csv('trending_videos.csv')\n",
-    "print(trending_videos.head())"
    ]
   },
   {
@@ -531,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7a6582ac",
    "metadata": {},
    "outputs": [
@@ -547,15 +506,21 @@
     }
    ],
    "source": [
-    "trending_videos['category_name'] = trending_videos['category_id'].map(category_mapping)\n",
-    "\n",
+    "# Visualize Top Genres\n",
     "plt.figure(figsize=(12, 8))\n",
-    "sns.countplot(y=trending_videos['category_name'], order=trending_videos['category_name'].value_counts().index, palette='viridis')\n",
-    "plt.title('Number of Trending Videos by Category')\n",
-    "plt.xlabel('Number of Videos')\n",
-    "plt.ylabel('Category')\n",
+    "sns.barplot(x=genre_counts.values, y=genre_counts.index, palette='Set2')\n",
+    "plt.title('Top 15 Netflix Genres by Content Count')\n",
+    "plt.xlabel('Number of Titles')\n",
+    "plt.ylabel('Genre')\n",
+    "plt.tight_layout()\n",
     "plt.show()\n",
-    "#TREND VS CATEGORY VUSUAL"
+    "\n",
+    "# Content type by genre for top genres\n",
+    "top_5_genres = genre_counts.head(5).index\n",
+    "for genre in top_5_genres:\n",
+    "    genre_data = netflix_data[netflix_data['listed_in'].str.contains(genre, na=False)]\n",
+    "    print(f\"\\n{genre} - Content Type Distribution:\")\n",
+    "    print(genre_data['type'].value_counts())"
    ]
   },
   {
