Add comprehensive Airbnb listing analysis project with detailed comments and documentation (dataset not included due to size limits)

--- a/batting intent analysis/Batting Intent Analysis.ipynb
+++ b/batting intent analysis/Batting Intent Analysis.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "# Load the IPL deliveries dataset\n",
     "# This dataset contains ball-by-ball information for IPL matches\n",
-    "df = pd.read_csv('ipl_deliveries.csv')\n",
+    "df = pd.read_csv('ipl_match_1473461_deliveries.csv')\n",
     "\n",
     "# Create a copy of the dataframe to preserve original data\n",
     "df_copy = df.copy()\n",
