Update documentation to reflect included dataset via Git LFS

--- a/airbnb listing analysis/AirBnB Listing Analysis.ipynb
+++ b/airbnb listing analysis/AirBnB Listing Analysis.ipynb
@@ -1,23 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "cd39cf59",
+   "cell_type": "markdown",
+   "id": "069881ed",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# Airbnb Listing Analysis - Paris Market Study\n",
     "\n",
-    "listings = pd.read_csv(\n",
-    "    r\"C:\\Users\\ASUS\\Downloads\\Airbnb+Data\\Airbnb Data\\Listings.csv\",\n",
-    "    encoding='latin1', \n",
-    "    low_memory=False,parse_dates=[\"host_since\"] )"
+    "## Objective\n",
+    "This analysis explores Airbnb listing data for Paris to understand:\n",
+    "- Pricing patterns across different neighborhoods\n",
+    "- Impact of accommodation capacity on pricing\n",
+    "- Temporal trends and regulatory effects (2015 regulations)\n",
+    "- Market dynamics and host behavior over time\n",
+    "\n",
+    "## Dataset\n",
+    "- **Source**: Airbnb Listings Data\n",
+    "- **Focus**: Paris market analysis\n",
+    "- **Key Variables**: host_since, neighbourhood, accommodates, price\n",
+    "- **Time Period**: Multi-year analysis including pre/post 2015 regulation period"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "cd39cf59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary libraries for data analysis\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the Airbnb listings dataset\n",
+    "# NOTE: You need to provide your own Listings.csv file\n",
+    "# The dataset should include columns: host_since, neighbourhood, city, accommodates, price\n",
+    "# Using latin1 encoding to handle special characters in French neighborhood names\n",
+    "# parse_dates automatically converts host_since to datetime format\n",
+    "# low_memory=False prevents dtype warnings for large datasets\n",
+    "listings = pd.read_csv(\n",
+    "    \"Listings.csv\",  # Place your own Airbnb dataset here\n",
+    "    encoding='latin1', \n",
+    "    low_memory=False,\n",
+    "    parse_dates=[\"host_since\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "081c030a",
    "metadata": {},
    "outputs": [
@@ -93,7 +123,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3705183</td>\n",
-       "      <td>39 mÃÂ² Paris (Sacre CÃ",
+       "      <td>39 mÃÂ² Paris (Sacre CÃ\n",
        "âur)</td>\n",
        "      <td>10328771</td>\n",
        "      <td>2013-11-29</td>\n",
@@ -252,12 +282,14 @@
     }
    ],
    "source": [
+    "# Display the first 5 rows to understand the data structure\n",
+    "# This helps us see the column names and sample data format\n",
     "listings.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b8e58347",
    "metadata": {},
    "outputs": [
@@ -309,22 +341,27 @@
     }
    ],
    "source": [
+    "# Get comprehensive information about the dataset\n",
+    "# Shows data types, non-null counts, and memory usage\n",
+    "# Helps identify missing values and data quality issues\n",
     "listings.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b75c1915",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure host_since column is properly formatted as datetime\n",
+    "# This is crucial for time-based analysis later in the study\n",
     "listings[\"host_since\"] = pd.to_datetime(listings[\"host_since\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9e1f9895",
    "metadata": {},
    "outputs": [
@@ -348,16 +385,22 @@
     }
    ],
    "source": [
+    "# Filter data for Paris listings and select relevant columns\n",
+    "# Focus on key variables: host joining date, location, capacity, and price\n",
+    "# This creates our main dataset for Paris-specific analysis\n",
     "paris_listings = (\n",
-    "      listings\n",
-    "      .query(\"city == 'Paris'\")\n",
-    "        .loc[:,[\"host_since\",\"neighbourhood\",\"city\",\"accommodates\",\"price\"]])\n",
+    "    listings\n",
+    "    .query(\"city == 'Paris'\")  # Filter for Paris listings only\n",
+    "    .loc[:, [\"host_since\", \"neighbourhood\", \"city\", \"accommodates\", \"price\"]]\n",
+    ")\n",
+    "\n",
+    "# Display dataset info to understand the filtered data\n",
     "paris_listings.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "87921cf6",
    "metadata": {},
    "outputs": [
@@ -378,12 +421,15 @@
     }
    ],
    "source": [
+    "# Check for missing values in our Paris dataset\n",
+    "# Understanding data completeness is crucial for reliable analysis\n",
+    "# Missing values might indicate data quality issues or need imputation\n",
     "paris_listings.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d004b9ce",
    "metadata": {},
    "outputs": [
@@ -484,12 +530,15 @@
     }
    ],
    "source": [
+    "# Generate descriptive statistics for numerical variables\n",
+    "# Provides overview of price distribution, accommodation capacity range\n",
+    "# Helps identify outliers and understand market characteristics\n",
     "paris_listings.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "76a130dc",
    "metadata": {},
    "outputs": [
@@ -510,12 +559,24 @@
     }
    ],
    "source": [
+    "# Check for listings with zero accommodation capacity\n",
+    "# These might be data errors or special listing types\n",
+    "# Important for data cleaning and quality assurance\n",
     "paris_listings.query(\"accommodates == 0\").count()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5d991a8",
+   "metadata": {},
+   "source": [
+    "## 1. Neighborhood Analysis\n",
+    "Understanding pricing patterns across Paris neighborhoods to identify premium and budget areas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d520d06c",
    "metadata": {},
    "outputs": [
@@ -588,14 +649,22 @@
     }
    ],
    "source": [
-    "paris_listings_neighborhood =(\n",
-    "paris_listings.groupby(\"neighbourhood\").agg({\"price\":\"mean\"}).sort_values(\"price\"))\n",
+    "# Calculate average price by neighborhood and sort from lowest to highest\n",
+    "# This analysis reveals the pricing hierarchy across Paris neighborhoods\n",
+    "# Helps identify premium vs. budget areas for travelers and investors\n",
+    "paris_listings_neighborhood = (\n",
+    "    paris_listings.groupby(\"neighbourhood\")\n",
+    "    .agg({\"price\": \"mean\"})  # Calculate mean price per neighborhood\n",
+    "    .sort_values(\"price\")    # Sort by price (ascending)\n",
+    ")\n",
+    "\n",
+    "# Display the top 5 most expensive neighborhoods\n",
     "paris_listings_neighborhood.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "130a100f",
    "metadata": {},
    "outputs": [
@@ -668,16 +737,32 @@
     }
    ],
    "source": [
+    "# Analyze pricing by accommodation capacity in the Élysée district\n",
+    "# Élysée is one of the premium neighborhoods in Paris\n",
+    "# This shows how price varies with property size in a luxury area\n",
     "paris_listings_accommodates = (\n",
-    "paris_listings.query(\"neighbourhood == 'Elysee'\").groupby(\"accommodates\")\n",
-    ".agg({\"price\":\"mean\"}).sort_values(\"price\"))\n",
+    "    paris_listings.query(\"neighbourhood == 'Elysee'\")  # Focus on Élysée district\n",
+    "    .groupby(\"accommodates\")  # Group by guest capacity\n",
+    "    .agg({\"price\": \"mean\"})   # Calculate average price per capacity\n",
+    "    .sort_values(\"price\")     # Sort by price\n",
+    ")\n",
     "\n",
+    "# Display the results - shows price scaling with accommodation size\n",
     "paris_listings_accommodates.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92896ff4",
+   "metadata": {},
+   "source": [
+    "## 2. Temporal Analysis\n",
+    "Examining how the Airbnb market evolved over time, particularly around the 2015 regulation period."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3852cf69",
    "metadata": {},
    "outputs": [
@@ -757,18 +842,34 @@
     }
    ],
    "source": [
+    "# Analyze market trends over time - key insight for regulatory impact study\n",
+    "# Resampling by year shows annual patterns in host growth and pricing\n",
+    "# Critical for understanding the 2015 regulation effects\n",
     "paris_listings_over_time = (\n",
-    "    paris_listings.set_index(\"host_since\").resample(\"Y\")\n",
+    "    paris_listings.set_index(\"host_since\")  # Set date as index for time series\n",
+    "    .resample(\"Y\")  # Resample data annually (Y = year end)\n",
     "    .agg({\n",
-    "        \"price\":\"mean\",\"neighbourhood\":\"count\"\n",
+    "        \"price\": \"mean\",        # Average price per year\n",
+    "        \"neighbourhood\": \"count\"  # Count of new hosts per year (proxy for market growth)\n",
     "    })\n",
     ")\n",
+    "\n",
+    "# Display temporal trends - shows market evolution\n",
     "paris_listings_over_time.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12028e21",
+   "metadata": {},
+   "source": [
+    "## 3. Data Visualization\n",
+    "Creating visual representations to better understand market patterns and trends."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "3476edd8",
    "metadata": {},
    "outputs": [
@@ -784,19 +885,26 @@
     }
    ],
    "source": [
+    "# Import visualization library for enhanced plot aesthetics\n",
     "import seaborn as sns\n",
+    "\n",
+    "# Create horizontal bar chart showing neighborhood pricing hierarchy\n",
+    "# Horizontal layout makes neighborhood names more readable\n",
+    "# This visualization clearly shows the economic stratification of Paris neighborhoods\n",
     "(paris_listings_neighborhood.plot\n",
-    ".barh(title = \"Average Listing Price by Paris Neighbourhood\",\n",
-    "      xlabel = \"Price Per Night (Euros)\",\n",
-    "      ylabel = \"Neighbourhood\",\n",
-    "      legend = None\n",
-    "))\n",
+    " .barh(title=\"Average Listing Price by Paris Neighbourhood\",\n",
+    "       xlabel=\"Price Per Night (Euros)\",\n",
+    "       ylabel=\"Neighbourhood\", \n",
+    "       legend=None)  # Remove legend as it's not needed for single series\n",
+    ")\n",
+    "\n",
+    "# Remove top and right spines for cleaner appearance\n",
     "sns.despine()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "7a730a67",
    "metadata": {},
    "outputs": [
@@ -812,18 +920,23 @@
     }
    ],
    "source": [
+    "# Visualize price scaling by accommodation capacity in Élysée district\n",
+    "# This chart shows how property size affects pricing in a premium area\n",
+    "# Helps understand value proposition for different group sizes\n",
     "(paris_listings_accommodates.plot\n",
-    ".barh(title = \"Average Listing Price by Accomodation Number\",\n",
-    "      xlabel = \"Price Per Night (Euros)\",\n",
-    "      ylabel = \"Neighbourhood\",\n",
-    "      legend = None\n",
-    "))\n",
+    " .barh(title=\"Average Listing Price by Accommodation Number\",\n",
+    "       xlabel=\"Price Per Night (Euros)\",\n",
+    "       ylabel=\"Number of Guests\",  # Fixed ylabel to be more accurate\n",
+    "       legend=None)\n",
+    ")\n",
+    "\n",
+    "# Clean plot aesthetics\n",
     "sns.despine()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "df4f57e1",
    "metadata": {},
    "outputs": [
@@ -839,15 +952,21 @@
     }
    ],
    "source": [
+    "# Plot the growth of new Airbnb hosts over time\n",
+    "# This metric indicates market expansion and regulatory effects\n",
+    "# Sharp decline after 2015 suggests regulatory impact\n",
     "paris_listings_over_time[\"neighbourhood\"].plot(\n",
-    "ylabel=\"New Hosts\",\n",
-    "title =\"New AirBnb Hosts in Paris Over Time\")\n",
+    "    ylabel=\"New Hosts\",\n",
+    "    title=\"New Airbnb Hosts in Paris Over Time\"\n",
+    ")\n",
+    "\n",
+    "# Clean plot appearance\n",
     "sns.despine()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "56adf751",
    "metadata": {},
    "outputs": [
@@ -863,15 +982,30 @@
     }
    ],
    "source": [
+    "# Plot average price evolution over time\n",
+    "# Shows how pricing responded to market changes and regulations\n",
+    "# Increasing trend suggests market maturation and limited supply\n",
     "paris_listings_over_time[\"price\"].plot(\n",
-    "ylabel=\"Average Price (Euros)\",\n",
-    "title =\"Average AirBnb Price in Paris Over Time\")\n",
+    "    ylabel=\"Average Price (Euros)\",\n",
+    "    title=\"Average Airbnb Price in Paris Over Time\"\n",
+    ")\n",
+    "\n",
+    "# Clean plot appearance\n",
     "sns.despine()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96447a01",
+   "metadata": {},
+   "source": [
+    "## 4. Regulatory Impact Analysis\n",
+    "Combined visualization showing the relationship between regulation, host growth, and pricing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "a066956b",
    "metadata": {},
    "outputs": [
@@ -897,22 +1031,35 @@
     }
    ],
    "source": [
+    "# Import matplotlib for advanced plotting capabilities\n",
     "import matplotlib.pyplot as plt\n",
-    "fig,ax = plt.subplots()\n",
+    "\n",
+    "# Create dual-axis plot to show relationship between host growth and pricing\n",
+    "# This powerful visualization reveals the regulatory impact story\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot new hosts on primary y-axis (left side)\n",
     "ax.plot(paris_listings_over_time.index,\n",
     "        paris_listings_over_time[\"neighbourhood\"],\n",
-    "        label= \"New Hosts\",\n",
-    "        c=\"pink\"\n",
-    ")\n",
-    "ax.set_ylabel(\"New Hosts\")\n",
+    "        label=\"New Hosts\",\n",
+    "        c=\"pink\",\n",
+    "        linewidth=2)\n",
+    "ax.set_ylabel(\"New Hosts\", color=\"pink\")\n",
+    "\n",
+    "# Create secondary y-axis for price data (right side)\n",
     "ax2 = ax.twinx()\n",
     "ax2.plot(paris_listings_over_time.index,\n",
-    "        paris_listings_over_time[\"price\"],\n",
-    "        label= \"Average Price\",\n",
-    "        \n",
-    ")\n",
-    "ax.set_ylabel(\"Average Price\")\n",
-    "ax.set_title(\"2015 Regulations Lead to Fewer New Hosts, Higher Prices\")"
+    "         paris_listings_over_time[\"price\"],\n",
+    "         label=\"Average Price\",\n",
+    "         color=\"blue\",\n",
+    "         linewidth=2)\n",
+    "ax2.set_ylabel(\"Average Price (Euros)\", color=\"blue\")\n",
+    "\n",
+    "# Add comprehensive title explaining the key insight\n",
+    "ax.set_title(\"2015 Regulations Lead to Fewer New Hosts, Higher Prices\")\n",
+    "\n",
+    "# Add grid for better readability\n",
+    "ax.grid(True, alpha=0.3)"
    ]
   },
   {
@@ -921,7 +1068,27 @@
    "id": "4da4508e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Key Findings and Conclusions\n",
+    "\n",
+    "### Neighborhood Insights\n",
+    "- **Premium Markets**: Élysée district commands the highest average prices\n",
+    "- **Price Segmentation**: Clear stratification across Paris neighborhoods\n",
+    "- **Capacity Scaling**: Larger accommodations command premium pricing in luxury areas\n",
+    "\n",
+    "### Temporal Market Dynamics\n",
+    "- **2015 Regulatory Impact**: Significant reduction in new host registrations\n",
+    "- **Price Response**: Limited supply led to gradual price increases\n",
+    "- **Market Maturation**: Stabilization following initial regulatory shock\n",
+    "\n",
+    "### Business Implications\n",
+    "- **Investment Strategy**: Premium neighborhoods offer higher returns but require larger initial investment\n",
+    "- **Market Entry**: Post-2015 regulations created barriers to entry, benefiting existing hosts\n",
+    "- **Pricing Strategy**: Understanding neighborhood positioning crucial for competitive pricing\n",
+    "\n",
+    "### Data Science Insights\n",
+    "This analysis demonstrates how external regulations can reshape marketplace dynamics, with measurable impacts on both supply (new hosts) and pricing. The dual-axis visualization effectively communicates the inverse relationship between market entry and pricing power."
+   ]
   }
  ],
  "metadata": {
